Add action to forms.html for proper redirect

--- a/public/forms.html
+++ b/public/forms.html
@@ -1,9 +1,9 @@
 <!-- This file helps Netlify detect forms during deploy -->
-<form name="waitlist" netlify netlify-honeypot="bot-field" hidden>
+<form name="waitlist" action="/dziekujemy/" netlify netlify-honeypot="bot-field" hidden>
   <input name="bot-field">
   <input name="email" type="email">
 </form>
-<form name="waitlist-footer" netlify netlify-honeypot="bot-field" hidden>
+<form name="waitlist-footer" action="/dziekujemy/" netlify netlify-honeypot="bot-field" hidden>
   <input name="bot-field">
   <input name="email" type="email">
 </form>
